--- a/electric.html
+++ b/electric.html
@@ -44,7 +44,7 @@
          <a href="#stratocaster"><h4>stratocaster</h4></a>
          <a href="#les-paul"><h4>les paul</h4></a>
          <a href="#8-string"><h4>7 and 8 string</h4></a>
-         <a href="video"><h4>more info and more guitars</h4></a>
+         <a href="#video"><h4>more info and more guitars</h4></a>
          
         </div>
     </div>
