--- a/electric.html
+++ b/electric.html
@@ -42,7 +42,7 @@
          <div class="jump">
          <a href="#telecaster"><h4>telecaster</h4></a>
          <a href="#stratocaster"><h4>stratocaster</h4></a>
-         <a href="#les-paul"><h4>les paul</h4></a>
+         <a href="#lespaul"><h4>les paul</h4></a>
          <a href="#8-string"><h4>7 and 8 string</h4></a>
          <a href="#video"><h4>more info and more guitars</h4></a>
          
