--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="electric.html"> <video autoplay muted loop class="e-vid">
             <source src="bgvidel.mp4" type="video/mp4">
           </video> <h5>Electric</h5></a>
-        <a href="Guitars.html"> <img src="guitar-bg.jpg"> <h5>Guitars</h5></a> 
+        <a href="guitars.html"> <img src="guitar-bg.jpg"> <h5>Guitars</h5></a> 
         <a href="how.html"> <img src="howbg.jfif"> <h5> How its made</h5> </a>
         <a href="history.html"><img src="history-bg.jpg"> <h5>History<h5> </a>
 
@@ -68,6 +68,7 @@
 </html>
 
    
+
 
 
 
