--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <footer>
         <h6>
-            hope this information was use full for you
+            hope this information was useful for you
         </h6>
     </footer>
     
@@ -68,6 +68,7 @@
 </html>
 
    
+
 
 
 
